--- a/src/app/components/editstudent/editstudent.component.html
+++ b/src/app/components/editstudent/editstudent.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-      <a href="#" routerLink="/dashboard" class="btn btn-link"><i class="fa fa-arrow-circle-o-left">&nbsp;Back To Students List</i></a> 
+      <a href="#" [routerLink]="['/students/'+id]" class="btn btn-link"><i class="fa fa-arrow-circle-o-left">&nbsp;Back To Student Details</i></a> 
   </div>
   <div class="col-md-6">
 
