--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,35 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <div class="container">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Student Test Management</a>
-  
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#" routerLink="/">Home</a>
-            </li> 
-            <li class="nav-item">
-                <a class="nav-link" href="#" routerLink="/register">Register</a>
-              </li> 
-              <li class="nav-item">
-                <a class="nav-link" href="#" routerLink="/login">Login</a>
-              </li> 
-          </ul>    
-        </div>
-        </div>
-      </nav>
-      <br><br>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Student Test Management</a>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li *ngIf="isLoggedIn" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/">Home</a>
+          </li> 
+          <li *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/dashboard">Dashboard</a>
+          </li> 
+        </ul>    
+
+        <ul class="navbar-nav ml-auto">
+          <li *ngIf="!isLoggedIn" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/register">Register</a>
+          </li> 
+          <li *ngIf="!isLoggedIn" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/login">Login</a>
+          </li> 
+          <li *ngIf="isLoggedIn" class="nav-item">
+            <a class="nav-link" href="#">{{loggedInUser}}</a>
+          </li> 
+          <li *ngIf="isLoggedIn" class="nav-item">
+            <a class="nav-link" href="#" (click)="onLogoutClick()">Logout</a>
+          </li> 
+        </ul>   
+      </div>
+      </div>
+    </nav>
+    <br><br>
