--- a/src/app/components/studentdetails/studentdetails.component.html
+++ b/src/app/components/studentdetails/studentdetails.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-      <a routerLink="/" class="btn btn-link"><i class="fa fa-arrow-circle-o-left"></i> Back To Students List</a>
+      <a routerLink="/dashboard" class="btn btn-link"><i class="fa fa-arrow-circle-o-left"></i> Back To Students List</a>
     </div>
     <div class="col-md-6">
       <div class="btn-group pull-right">
@@ -16,9 +16,6 @@
       <div class="row">
         <div class="col-md-8">
           <h4>Student ID: {{id}}</h4>
-        </div>
-        <div class="col-md-4">
-          <!-- BALANCE GOES HERE -->
         </div>
       </div>
   
