--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,35 +1,44 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <div class="container">
+<nav class="navbar navbar-toggleable-md navigation">
+      
+      <a class="navbar-brand" href="#"><i class="fa fa-graduation-cap"></i>&nbsp;Student Test Management</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Student Test Management</a>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li *ngIf="isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#" routerLink="/">Home</a>
+          <li *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'
+          || loggedInUser == 'sahilkaushal2013@gmail.com'" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/teacherhome">Home</a>
           </li> 
-          <li *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'" class="nav-item">
-            <a class="nav-link" href="#" routerLink="/dashboard">Dashboard</a>
+          <li *ngIf="isLoggedIn && loggedInUser != 'sahil@gmail.com'
+          && loggedInUser != 'sahilkaushal2013@gmail.com'" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/studenthome">Home</a>
+          </li>
+          <li *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'
+          || loggedInUser == 'sahilkaushal2013@gmail.com'" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/dashboard">Students</a>
+          </li> 
+          <li *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'
+          || loggedInUser == 'sahilkaushal2013@gmail.com'" class="nav-item">
+            <a class="nav-link" href="#" routerLink="/questions">Questions</a>
           </li> 
         </ul>    
 
         <ul class="navbar-nav ml-auto">
           <li *ngIf="!isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#" routerLink="/register">Register</a>
-          </li> 
-          <li *ngIf="!isLoggedIn" class="nav-item">
             <a class="nav-link" href="#" routerLink="/login">Login</a>
           </li> 
           <li *ngIf="isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#">{{loggedInUser}}</a>
+
+            <a class="nav-link" href="#">
+              <img src="{{userPhotoUrl}}" height="30" width="30">&nbsp;{{loggedInUser}}</a>
           </li> 
           <li *ngIf="isLoggedIn" class="nav-item">
             <a class="nav-link" href="#" (click)="onLogoutClick()">Logout</a>
           </li> 
         </ul>   
       </div>
-      </div>
+     
     </nav>
-    <br><br>
+    <br>
