--- a/src/app/components/subject/subject.component.html
+++ b/src/app/components/subject/subject.component.html
@@ -1,3 +1,37 @@
-<p>
-  subject works!
-</p>
+
+<div class="row">
+  <div class="col-md-6">
+    <h2><i class="fa fa-users"></i>&nbsp;Questions({{this.subject}})</h2>
+  </div>
+</div>
+<table *ngIf="tests?.length> 0;else noTests" class="table table-striped">
+  <thead class="thead-inverse">
+    <tr>
+      <th>Subject</th>
+      <th>Test ID</th>
+      <th>Question</th>
+      <th>Option 1</th>
+      <th>Option 2</th>
+      <th>Option 3</th>
+      <th>Option 4</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let test of tests">
+        <td *ngIf="test.subject == this.subject">{{test.subject}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.testid}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.question}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.option1}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.option2}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.option3}}</td>
+        <td *ngIf="test.subject == this.subject">{{test.option4}}</td>
+    </tr>
+    <br>
+  <br>
+  </tbody> 
+</table>
+
+<ng-template #noTests>
+  <hr>
+  <h5>There are no questions in the system</h5>
+</ng-template>
