--- a/src/app/components/taketest/taketest.component.html
+++ b/src/app/components/taketest/taketest.component.html
@@ -1,26 +1,41 @@
 
-  <div class="container mt-5">
+  <div class="container mt-2">
       <!-- From here -->
-      <div class="card-deck pt-5">
+      <div class="card-deck">
           <div class="card bg-primary shadow">
             <div class="card-body text-center">
               <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-              <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+id]">English</button></p>
+              <button (click) = "Subject('English')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">English</button></p>
             </div>
           </div>
           <div class="card bg-primary shadow">
               <div class="card-body text-center">
                 <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+id]">Maths</button></p>
+                <button (click) = "Subject('Maths')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Maths</button></p>
               </div>
             </div>
             <div class="card bg-primary shadow">
                 <div class="card-body text-center">
                   <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                  <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+id]">Science</button></p>
+                  <button (click) = "Subject('Science')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Science</button></p>
+                </div>
+              </div>
+        </div>      
+      <div class="card-deck mt-2">
+              <div class="card bg-primary shadow">
+                <div class="card-body text-center">
+                  <p class="card-text"><i class="fa fa-paste my-2"></i><br>
+                  <button (click) = "Subject('Hindi')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Hindi</button></p>
+                </div>
+              </div>
+              <div class="card bg-primary shadow">
+                <div class="card-body text-center">
+                  <p class="card-text"><i class="fa fa-paste my-2"></i><br>
+                  <button (click) = "Subject('SST')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">SST</button></p>
                 </div>
               </div>
       
       <!-- From here -->
     </div>
+  </div>
   
