--- a/src/app/components/tests/tests.component.html
+++ b/src/app/components/tests/tests.component.html
@@ -4,7 +4,6 @@
   </div>
 </div>
 <table *ngIf="tests?.length> 0;else noTests" class="table table-striped">
-    <table *ngFor="let test of tests" class="table table-striped">
   <thead class="thead-inverse">
     <tr>
       <th>Subject</th>
@@ -17,52 +16,56 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngIf= "test.subject.test.subject == 'Maths'">
-        <td>{{test.subject.test.subject}}</td>
-        <td>{{test.subject.test.testid}}</td>
-        <td>{{test.subject.test.question}}</td>
-        <td>{{test.subject.test.option1}}</td>
-        <td>{{test.subject.test.option2}}</td>
-        <td>{{test.subject.test.option3}}</td>
-        <td>{{test.subject.test.option4}}</td>
+    <tr *ngFor="let test of tests">
+        <td *ngIf="test.subject == 'Hindi'">{{test.subject}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.testid}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.question}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.option1}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.option2}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.option3}}</td>
+        <td *ngIf="test.subject == 'Hindi'">{{test.option4}}</td>
     </tr>
-    <tr *ngIf= "test.subject.test.subject == 'Hindi'">
-        <td>{{test.subject.test.subject}}</td>
-        <td>{{test.subject.test.testid}}</td>
-        <td>{{test.subject.test.question}}</td>
-        <td>{{test.subject.test.option1}}</td>
-        <td>{{test.subject.test.option2}}</td>
-        <td>{{test.subject.test.option3}}</td>
-        <td>{{test.subject.test.option4}}</td>
-    </tr>
-    <tr *ngIf= "test.subject.test.subject == 'English'">
-        <td>{{test.subject.test.subject}}</td>
-        <td>{{test.subject.test.testid}}</td>
-        <td>{{test.subject.test.question}}</td>
-        <td>{{test.subject.test.option1}}</td>
-        <td>{{test.subject.test.option2}}</td>
-        <td>{{test.subject.test.option3}}</td>
-        <td>{{test.subject.test.option4}}</td>
-    </tr>
-    <tr *ngIf= "test.subject.test.subject == 'Science'">
-        <td>{{test.subject.test.subject}}</td>
-        <td>{{test.subject.test.testid}}</td>
-        <td>{{test.subject.test.question}}</td>
-        <td>{{test.subject.test.option1}}</td>
-        <td>{{test.subject.test.option2}}</td>
-        <td>{{test.subject.test.option3}}</td>
-        <td>{{test.subject.test.option4}}</td>
-    </tr>
-    <tr *ngIf= "test.subject.test.subject == 'Social Studies'">
-        <td>{{test.subject.test.subject}}</td>
-        <td>{{test.subject.test.testid}}</td>
-        <td>{{test.subject.test.question}}</td>
-        <td>{{test.subject.test.option1}}</td>
-        <td>{{test.subject.test.option2}}</td>
-        <td>{{test.subject.test.option3}}</td>
-        <td>{{test.subject.test.option4}}</td>
-    </tr>
-  </tbody>
+    <br>
+    <tr *ngFor="let test of tests">
+      <td *ngIf="test.subject == 'Maths'">{{test.subject}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.testid}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.question}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.option1}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.option2}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.option3}}</td>
+      <td *ngIf="test.subject == 'Maths'">{{test.option4}}</td>
+  </tr>
+  <br>
+  <tr *ngFor="let test of tests">
+    <td *ngIf="test.subject == 'Science'">{{test.subject}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.testid}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.question}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.option1}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.option2}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.option3}}</td>
+    <td *ngIf="test.subject == 'Science'">{{test.option4}}</td>
+</tr>
+<br>
+<tr *ngFor="let test of tests">
+  <td *ngIf="test.subject == 'English'">{{test.subject}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.testid}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.question}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.option1}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.option2}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.option3}}</td>
+  <td *ngIf="test.subject == 'English'">{{test.option4}}</td>
+</tr>
+<br>
+<tr *ngFor="let test of tests">
+  <td *ngIf="test.subject == 'SST'">{{test.subject}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.testid}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.question}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.option1}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.option2}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.option3}}</td>
+  <td *ngIf="test.subject == 'SST'">{{test.option4}}</td>
+</tr>
+  </tbody> 
 </table>
 
 <ng-template #noTests>
