--- a/src/app/components/addtests/addtests.component.html
+++ b/src/app/components/addtests/addtests.component.html
@@ -20,15 +20,9 @@
             [(ngModel)]="test.subject"
             name="subject"
             #testSubject="ngModel"
-            minlength="2"
+            minlength="5"
             required
           >
-          <div *ngIf="test.subject.errors?.required && test.subject.touched" class="alert alert-danger">
-            Subject is required
-          </div>
-          <div *ngIf="test.subject.errors?.minlength && test.subject.touched" class="alert alert-danger">
-            Must be at least 2 characters
-          </div>
         </div>
   
         <div class="form-group">
@@ -42,12 +36,6 @@
             minlength="2"
             required
           >
-          <div *ngIf="test.question.errors?.required && test.question.touched" class="alert alert-danger">
-            Last name is required
-          </div>
-          <div *ngIf="test.question.errors?.minlength && test.question.touched" class="alert alert-danger">
-            Must be at least 2 characters
-          </div>
         </div>
 
         <div class="form-group">
@@ -55,18 +43,12 @@
             <input 
               type="text"
               class="form-control"
-              [(ngModel)]="test.option1"
+              [(ngModel)]="test.option1c"
               name="option1"
               #testOption1="ngModel"
               minlength="2"
               required
             >
-            <div *ngIf="test.option1.errors?.required && test.option1.touched" class="alert alert-danger">
-              Last name is required
-            </div>
-            <div *ngIf="test.option1.errors?.minlength && test.option1.touched" class="alert alert-danger">
-              Must be at least 2 characters
-            </div>
           </div>
 
           <div class="form-group">
@@ -80,12 +62,6 @@
                 minlength="2"
                 required
               >
-              <div *ngIf="test.option2.errors?.required && test.option2.touched" class="alert alert-danger">
-                Last name is required
-              </div>
-              <div *ngIf="test.option2.errors?.minlength && test.option2.touched" class="alert alert-danger">
-                Must be at least 2 characters
-              </div>
             </div>
 
             <div class="form-group">
@@ -99,12 +75,6 @@
                   minlength="2"
                   required
                 >
-                <div *ngIf="test.option3.errors?.required && test.option3.touched" class="alert alert-danger">
-                  Last name is required
-                </div>
-                <div *ngIf="test.option3.errors?.minlength && test.option3.touched" class="alert alert-danger">
-                  Must be at least 2 characters
-                </div>
               </div>
 
               <div class="form-group">
@@ -118,31 +88,7 @@
                     minlength="2"
                     required
                   >
-                  <div *ngIf="test.option4.errors?.required && test.option4.touched" class="alert alert-danger">
-                    Last name is required
-                  </div>
-                  <div *ngIf="test.option4.errors?.minlength && test.option4.touched" class="alert alert-danger">
-                    Must be at least 2 characters
-                  </div>
                 </div>
-                <div class="form-group">
-                    <label for="option4">Test ID</label>
-                    <input 
-                      type="text"
-                      class="form-control"
-                      [(ngModel)]="test.testid"
-                      name="testid"
-                      #testOption4="ngModel"
-                      minlength="2"
-                      required
-                    >
-                    <div *ngIf="test.option4.errors?.required && test.option4.touched" class="alert alert-danger">
-                      Last name is required
-                    </div>
-                    <div *ngIf="test.option4.errors?.minlength && test.option4.touched" class="alert alert-danger">
-                      Must be at least 2 characters
-                    </div>
-                  </div>
   
         
         <input type="submit" class="btn btn-primary btn-block" value="Submit">
