--- a/src/app/components/taketest/taketest.component.html
+++ b/src/app/components/taketest/taketest.component.html
@@ -5,19 +5,19 @@
           <div class="card bg-primary shadow">
             <div class="card-body text-center">
               <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-              <button (click) = "Subject('English')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">English</button></p>
+              <button  type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+1]">English</button></p>
             </div>
           </div>
           <div class="card bg-primary shadow">
               <div class="card-body text-center">
                 <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                <button (click) = "Subject('Maths')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Maths</button></p>
+                <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+2]">Maths</button></p>
               </div>
             </div>
             <div class="card bg-primary shadow">
                 <div class="card-body text-center">
                   <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                  <button (click) = "Subject('Science')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Science</button></p>
+                  <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+3]">Science</button></p>
                 </div>
               </div>
         </div>      
@@ -25,13 +25,13 @@
               <div class="card bg-primary shadow">
                 <div class="card-body text-center">
                   <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                  <button (click) = "Subject('Hindi')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">Hindi</button></p>
+                  <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+0]">Hindi</button></p>
                 </div>
               </div>
               <div class="card bg-primary shadow">
                 <div class="card-body text-center">
                   <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-                  <button (click) = "Subject('SST')" type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject']">SST</button></p>
+                  <button type="button" class="btn btn-md btn-green my-2" [routerLink]="['/subject/'+4]">SST</button></p>
                 </div>
               </div>
       
