--- a/src/app/components/adminhome/adminhome.component.html
+++ b/src/app/components/adminhome/adminhome.component.html
@@ -1,3 +1,32 @@
-<p>
-  adminhome works!
-</p>
+
+
+  <div class="container mt-5">
+    <!-- From here -->
+    <div class="card-deck pt-5">
+        <div class="card bg-primary shadow">
+          <div class="card-body text-center">
+            <p class="card-text"><i class="fa fa-user-circle-o my-2"></i><br>
+            <button type="button" class="btn btn-md btn-green my-2" routerLink="/dashboard">View Students</button></p>
+          </div>
+        </div>
+        <div class="card bg-primary shadow">
+          <div class="card-body text-center"> 
+            <p class="card-text"><i class="fa fa-question-circle my-2"></i><br>
+            <button type="button" class="btn btn-md btn-green my-2" routerLink="/questions">View Questions</button></p>
+          </div>
+        </div>
+        <div class="card bg-primary shadow">
+          <div class="card-body text-center">
+              <p class="card-text"><i class="fa fa-paste my-2"></i><br>
+              <button type="button" class="btn btn-md btn-green my-2" routerLink="/getmarks">View Student's Marks</button></p>
+          </div>
+        </div>
+        <div class="card bg-primary shadow">
+          <div class="card-body text-center">
+              <p class="card-text"><i class="fa fa-paste my-2"></i><br>
+              <button type="button" class="btn btn-md btn-green my-2" routerLink="/addteacher">Add Teacher</button></p>
+          </div>
+        </div>
+    
+    <!-- From here -->
+  </div>
