--- a/src/app/components/teacherhome/teacherhome.component.html
+++ b/src/app/components/teacherhome/teacherhome.component.html
@@ -17,7 +17,7 @@
         <div class="card bg-primary shadow">
           <div class="card-body text-center">
               <p class="card-text"><i class="fa fa-paste my-2"></i><br>
-              <button type="button" class="btn btn-md btn-green my-2" routerLink="/dashboard">View Student's Marks</button></p>
+              <button type="button" class="btn btn-md btn-green my-2" routerLink="/getmarks">View Student's Marks</button></p>
           </div>
         </div>
     
