--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
-<div *ngIf="isLoggedIn && loggedInUser != 'sahil@gmail.com'
-&& loggedInUser != 'sahilkaushal2013@gmail.com'"><app-studenthome></app-studenthome></div>
-<div *ngIf="isLoggedIn && loggedInUser == 'sahil@gmail.com'
-|| loggedInUser == 'sahilkaushal2013@gmail.com'"><app-teacherhome>
-</app-teacherhome></div>
+<div *ngFor="let user of students"><div *ngIf="isLoggedIn && user.email == loggedInUser
+    && user.role == 'student'"><app-studenthome></app-studenthome></div>
+<div *ngIf="isLoggedIn && user.email == loggedInUser && user.role == 'teacher'" ><app-teacherhome></app-teacherhome></div>
+</div>
+<div *ngIf="isLoggedIn && loggedInUser == 'sahilkaushal2013@gmail.com'"><app-adminhome>
+</app-adminhome></div>
